added cherry grove

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-    <base href="/portfolio/blunova1/index.html">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="track" content="8TGYQOuEB3cWFtObB">
-    <title>BluNova Properties - Luxury Rentals in Tennessee</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet">
+<html lang="en">
+  <head>
+    <base href="/portfolio/blunova1/index.html" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="track" content="8TGYQOuEB3cWFtObB" />
+    <title>Blunova Properties - Luxury Rentals in Tennessee</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap"
+      rel="stylesheet"
+    />
     <style>
       :root {
         --primary-color: #0066cc;
@@ -187,12 +191,25 @@
         }
       }
     </style>
-  
-<!-- Google tag (gtag.js) --> <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-V0GW25P48Z'); </script></head>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async=""
+      src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-V0GW25P48Z");
+    </script>
+  </head>
   <body>
     <header>
       <nav>
-        <div class="logo">BluNova Properties</div>
+        <div class="logo">Blunova Properties</div>
         <ul class="nav-links">
           <li><a href="/portfolio/blunova1/properties.html">Properties</a></li>
           <li><a href="/portfolio/blunova1/about.html">About</a></li>
@@ -204,10 +221,12 @@
     <section class="hero">
       <div class="hero-overlay"></div>
       <div class="hero-content">
-        <h1>Luxury Living in Tennessee</h1>
+        <h1>Exclusive Properties in Knoxville</h1>
         <p>
-          Discover our handpicked selection of premium rental properties across
-          the beautiful state of Tennessee.
+          I'm excited to share a curated selection of my rental properties
+          located in the beautiful city of Knoxville, Tennessee. These homes,
+          personally managed by me, offer a comfortable and welcoming living
+          experience.
         </p>
       </div>
     </section>
@@ -217,36 +236,76 @@
         <h2>Featured Properties</h2>
         <div class="property-list">
           <div class="property-card">
-            <div class="property-image" style="
+            <div
+              class="property-image"
+              style="
                 background-image: url('https://images.unsplash.com/photo-1605276374104-dee2a0ed3cd6?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80');
-              "></div>
+              "
+            ></div>
             <div class="property-details">
-              <h3 class="property-title">Luxurious Downtown Loft</h3>
-              <p>Nashville, TN</p>
-              <p class="property-price">$2,500/month</p>
-              <a href="/portfolio/blunova1/properties/downtown-loft.html" class="cta-button">View Details</a>
+              <h3 class="property-title">Cherry Grove</h3>
+              <p class="property-price">Knoxville, TN</p>
+              <p>Single family house with 4 Rooms for rent</p>
+              <a
+                href="/portfolio/blunova/properties/cherry-grove.html"
+                class="cta-button"
+                >View Details</a
+              >
             </div>
           </div>
           <div class="property-card">
-            <div class="property-image" style="
+            <div
+              class="property-image"
+              style="
                 background-image: url('https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1175&amp;q=80');
-              "></div>
+              "
+            ></div>
             <div class="property-details">
-              <h3 class="property-title">Charming Suburban Home</h3>
-              <p>Franklin, TN</p>
-              <p class="property-price">$3,200/month</p>
-              <a href="/portfolio/blunova1/properties/suburban-home.html" class="cta-button">View Details</a>
+              <h3 class="property-title">Creekhead Cove</h3>
+              <p class="property-price">Knoxville, TN</p>
+
+              <p>Single family house with 4 Rooms for rent</p>
+              <a
+                href="/portfolio/blunova1/properties/suburban-home.html"
+                class="cta-button"
+                >View Details</a
+              >
             </div>
           </div>
           <div class="property-card">
-            <div class="property-image" style="
+            <div
+              class="property-image"
+              style="
                 background-image: url('https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80');
-              "></div>
+              "
+            ></div>
             <div class="property-details">
-              <h3 class="property-title">Modern Riverfront Condo</h3>
-              <p>Chattanooga, TN</p>
-              <p class="property-price">$1,800/month</p>
-              <a href="/portfolio/blunova1/properties/riverfront-condo.html" class="cta-button">View Details</a>
+              <h3 class="property-title">Chimmney Ridge</h3>
+              <p class="property-price">Knoxville, TN</p>
+              <p>Single family house with 3 Rooms for rent</p>
+              <a
+                href="/portfolio/blunova1/properties/riverfront-condo.html"
+                class="cta-button"
+                >View Details</a
+              >
+            </div>
+          </div>
+          <div class="property-card">
+            <div
+              class="property-image"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80');
+              "
+            ></div>
+            <div class="property-details">
+              <h3 class="property-title">Luttrell and 3rd</h3>
+              <p class="property-price">Knoxville, TN</p>
+              <p>2 (1 bed apartment), and 2 (2 bedroom apartment)</p>
+              <a
+                href="/portfolio/blunova1/properties/riverfront-condo.html"
+                class="cta-button"
+                >View Details</a
+              >
             </div>
           </div>
         </div>
@@ -254,8 +313,7 @@
     </main>
 
     <footer>
-      <p>© 2023 BluNova Properties. All rights reserved.</p>
+      <p>© 2023 Blunova Properties. All rights reserved.</p>
     </footer>
-  
-
-</body></html>
+  </body>
+</html>
