--- a/properties/cherry-grove.html
+++ b/properties/cherry-grove.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-    <base href="/portfolio/blunova1/properties/downtown-loft.html">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="track" content="ilP37bsuJBxCMKqil">
-    <title>Luxurious Downtown Loft | BluNova Properties</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="track" content="ilP37bsuJBxCMKqil" />
+    <title>Cherry Grove | Blunova Properties</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap"
+      rel="stylesheet"
+    />
     <style>
       :root {
         --primary-color: #0066cc;
@@ -165,7 +168,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         gap: 1rem;
-        margin-top: 2rem;
+        margin-top: 0rem;
       }
 
       .gallery img {
@@ -198,12 +201,25 @@
         }
       }
     </style>
-  
-<!-- Google tag (gtag.js) --> <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-V0GW25P48Z'); </script></head>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async=""
+      src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-V0GW25P48Z");
+    </script>
+  </head>
   <body>
     <header>
       <nav>
-        <div class="logo">BluNova Properties</div>
+        <div class="logo">Blunova Properties</div>
         <ul class="nav-links">
           <li>
             <a href="/portfolio/blunova1/index.html">Properties</a>
@@ -217,8 +233,8 @@
     <main>
       <section class="property-hero">
         <div class="property-hero-content">
-          <h1>Luxurious Downtown Loft</h1>
-          <p>Nashville, TN • $2,500/month</p>
+          <h1>Cherry Grove</h1>
+          <p>Knoxville, TN</p>
         </div>
       </section>
 
@@ -226,75 +242,175 @@
         <div class="property-description">
           <h2>Property Overview</h2>
           <p>
-            Experience the pinnacle of urban living in this stunning downtown
-            Nashville loft. With its prime location and modern amenities, this
-            luxurious space offers the perfect blend of comfort and style for
-            those seeking an upscale city lifestyle.
+            This charming retreat in Knoxville offers a cozy and comfortable
+            stay. The property features modern amenities and is perfect for both
+            short and long stays.
           </p>
           <p>
-            Featuring soaring ceilings, expansive windows, and an open floor
-            plan, this loft bathes in natural light and provides breathtaking
-            views of the Nashville skyline. The contemporary design seamlessly
-            integrates with the building's historic charm, creating a unique
-            living experience that's second to none.
+            The space includes a fully equipped kitchen, a spacious living area,
+            and dedicated workspaces. The bedroom is designed for relaxation
+            with a comfortable bed and ample storage.
           </p>
           <h2>Amenities</h2>
           <ul>
-            <li>
-              Fully equipped gourmet kitchen with stainless steel appliances
-            </li>
-            <li>Spacious master bedroom with en-suite bathroom</li>
-            <li>Large walk-in closet</li>
+            <li>Fully equipped kitchen with modern appliances</li>
+            <li>Comfortable bedroom with premium linens</li>
+            <li>High-speed Wi-Fi and dedicated workspace</li>
+            <li>Smart TV with streaming services</li>
             <li>In-unit washer and dryer</li>
-            <li>Private balcony overlooking downtown</li>
-            <li>Access to rooftop terrace with BBQ area</li>
-            <li>24/7 fitness center</li>
-            <li>Secure parking garage</li>
+            <li>Free parking on premises</li>
+            <li>Air conditioning and heating</li>
           </ul>
           <h2>Location</h2>
           <p>
-            Situated in the heart of downtown Nashville, this loft puts you at
-            the center of it all. Enjoy easy access to world-class dining,
-            entertainment, and cultural attractions. The vibrant Broadway
-            district, with its legendary music venues, is just steps away.
-            Public transportation is readily available, making it easy to
-            explore all that Music City has to offer.
+            Located in a quiet neighborhood in Knoxville, this property is close
+            to local attractions, restaurants, and shopping centers. Enjoy easy
+            access to downtown Knoxville and the University of Tennessee.
           </p>
-          <a href="/portfolio/blunova1/apply.html" class="cta-button">Apply Now</a>
+          <a href="" class="cta-button">Apply Now</a>
         </div>
         <div class="property-features">
           <h3>Quick Facts</h3>
           <ul class="feature-list">
-            <li><strong>Bedrooms:</strong> 2</li>
-            <li><strong>Bathrooms:</strong> 2</li>
-            <li><strong>Square Footage:</strong> 1,200 sq ft</li>
-            <li><strong>Rent:</strong> $2,500/month</li>
-            <li><strong>Deposit:</strong> $2,500</li>
-            <li><strong>Lease Term:</strong> 12 months</li>
-            <li><strong>Available From:</strong> June 1, 2023</li>
+            <li><strong>Bedrooms:</strong> 4</li>
             <li>
-              <strong>Pet Policy:</strong> Cats and small dogs allowed
-              (additional pet rent applies)
+              <strong>Bathrooms:</strong>1.5 shared bathrooms, with the master
+              bedroom having a private bathroom.
             </li>
+            <li><strong>Pet Policy:</strong> Pets not allowed</li>
           </ul>
         </div>
       </section>
 
-      <section class="gallery">
-        <img src="https://images.unsplash.com/photo-1598528644866-3215eb3e9771?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80" alt="Modern living room with city view" width="200" height="200">
-        <img src="https://images.unsplash.com/photo-1595526114035-0d45ed16cfbf?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80" alt="Sleek kitchen with stainless steel appliances" width="200" height="200">
-        <img src="https://images.unsplash.com/photo-1585128792020-803d29415281?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1074&amp;q=80" alt="Spacious master bedroom" width="200" height="200">
-        <img src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80" alt="Luxurious bathroom with double vanity" width="200" height="200">
+      <section class="property-details">
+        <h2>Rooms</h2>
+        <p>
+          Each room below goes to airbnb which has availability and pricing
+          information
+        </p>
+        <section class="gallery">
+          <a
+            href="https://www.airbnb.com/rooms/1030589498253747656"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><img src="./rooms/3.webp" width="200" height="200"
+          /></a>
+          <a
+            href="https://www.airbnb.com/rooms/1030589992179067582"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><img src="./rooms/1.jpeg" width="200" height="200"
+          /></a>
+          <a
+            href="https://www.airbnb.com/rooms/1030589321409011455"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><img src="./rooms/2.webp" width="200" height="200"
+          /></a>
+
+          <a
+            href="https://www.airbnb.com/rooms/1010131515172519042"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><img src="./rooms/4.jpeg" width="200" height="200"
+          /></a>
+        </section>
+        <h2>House</h2>
+        <section class="gallery">
+          <img
+            src="./cherry-grove-images/Front_2.jpg"
+            width="200"
+            height="200"
+          />
+          <img src="./cherry-grove-images/Front.jpg" width="200" height="200" />
+          <img src="./cherry-grove-images/Foyer.jpg" width="200" height="200" />
+
+          <img
+            src="./cherry-grove-images/Kitchen.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/Kitchen_2.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/Kitchen_3.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/photo_10_2023-11-08_06-02-46.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/photo_12_2023-11-08_06-02-46.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/photo_13_2023-11-08_06-02-46.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/photo_14_2023-11-08_06-02-46.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/photo_2_2023-11-08_06-02-46.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/photo_3_2023-11-08_06-02-46.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/photo_4_2023-11-08_06-02-46.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/photo_5_2023-11-08_06-02-46.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/photo_6_2023-11-08_06-02-46.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/photo_7_2023-11-08_06-02-46.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/photo_8_2023-11-08_06-02-46.jpg"
+            width="200"
+            height="200"
+          />
+          <img
+            src="./cherry-grove-images/photo_9_2023-11-08_06-02-46.jpg"
+            width="200"
+            height="200"
+          />
+        </section>
       </section>
     </main>
 
     <footer>
-      <p>© 2023 BluNova Properties. All rights reserved.</p>
+      <p>© 2023 Blunova Properties. All rights reserved.</p>
     </footer>
 
     <script>
       document.addEventListener("DOMContentLoaded", () => {
-        const galleryImages = document.querySelectorAll(".gallery img");
+        const galleryImages = document.querySelectorAll(".gallery>img");
 
         galleryImages.forEach((img) => {
           img.addEventListener("click", () => {
@@ -326,6 +442,5 @@
         });
       });
     </script>
-  
-
-</body></html>
+  </body>
+</html>
