--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <base href="/portfolio/blunova1/index.html" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="track" content="8TGYQOuEB3cWFtObB" />
@@ -211,9 +210,9 @@
       <nav>
         <div class="logo">Blunova Properties</div>
         <ul class="nav-links">
-          <li><a href="/portfolio/blunova1/properties.html">Properties</a></li>
-          <li><a href="/portfolio/blunova1/about.html">About</a></li>
-          <li><a href="/portfolio/blunova1/contact.html">Contact</a></li>
+          <li><a href="./properties.html">Properties</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -239,16 +238,14 @@
             <div
               class="property-image"
               style="
-                background-image: url('https://images.unsplash.com/photo-1605276374104-dee2a0ed3cd6?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80');
+                background-image: url('./properties/cherry-grove-images/Front.jpg');
               "
             ></div>
             <div class="property-details">
               <h3 class="property-title">Cherry Grove</h3>
               <p class="property-price">Knoxville, TN</p>
               <p>Single family house with 4 Rooms for rent</p>
-              <a
-                href="/portfolio/blunova/properties/cherry-grove.html"
-                class="cta-button"
+              <a href="./properties/cherry-grove.html" class="cta-button"
                 >View Details</a
               >
             </div>
@@ -265,9 +262,7 @@
               <p class="property-price">Knoxville, TN</p>
 
               <p>Single family house with 4 Rooms for rent</p>
-              <a
-                href="/portfolio/blunova1/properties/suburban-home.html"
-                class="cta-button"
+              <a href="/properties/suburban-home.html" class="cta-button"
                 >View Details</a
               >
             </div>
@@ -283,9 +278,7 @@
               <h3 class="property-title">Chimmney Ridge</h3>
               <p class="property-price">Knoxville, TN</p>
               <p>Single family house with 3 Rooms for rent</p>
-              <a
-                href="/portfolio/blunova1/properties/riverfront-condo.html"
-                class="cta-button"
+              <a href="/properties/riverfront-condo.html" class="cta-button"
                 >View Details</a
               >
             </div>
@@ -301,9 +294,7 @@
               <h3 class="property-title">Luttrell and 3rd</h3>
               <p class="property-price">Knoxville, TN</p>
               <p>2 (1 bed apartment), and 2 (2 bedroom apartment)</p>
-              <a
-                href="/portfolio/blunova1/properties/riverfront-condo.html"
-                class="cta-button"
+              <a href="/properties/riverfront-condo.html" class="cta-button"
                 >View Details</a
               >
             </div>
