--- a/properties/cherry-grove.html
+++ b/properties/cherry-grove.html
@@ -75,7 +75,7 @@
 
       .property-hero {
         height: 60vh;
-        background-image: url("https://images.unsplash.com/photo-1605276374104-dee2a0ed3cd6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+        background-image: url("./cherry-grove-images/Front.jpg");
         background-size: cover;
         background-position: center;
         display: flex;
@@ -222,10 +222,10 @@
         <div class="logo">Blunova Properties</div>
         <ul class="nav-links">
           <li>
-            <a href="/portfolio/blunova1/index.html">Properties</a>
+            <a href="/index.html">Properties</a>
           </li>
-          <li><a href="/portfolio/blunova1/index.html">About</a></li>
-          <li><a href="/portfolio/blunova1/index.html">Contact</a></li>
+          <li><a href="/index.html">About</a></li>
+          <li><a href="/index.html">Contact</a></li>
         </ul>
       </nav>
     </header>
