--- a/about.html
+++ b/about.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-    <base href="/portfolio/blunova1/about.html">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="track" content="2qc1opQ0TsJDhuDIi">
-    <title>About BluNova Properties | Luxury Rentals in Tennessee</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="track" content="2qc1opQ0TsJDhuDIi" />
+    <title>About Blunova Properties | Luxury Rentals in Tennessee</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap"
+      rel="stylesheet"
+    />
     <style>
       :root {
         --primary-color: #0066cc;
@@ -273,12 +276,25 @@
         }
       }
     </style>
-  
-<!-- Google tag (gtag.js) --> <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-V0GW25P48Z'); </script></head>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async=""
+      src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-V0GW25P48Z");
+    </script>
+  </head>
   <body>
     <header>
       <nav>
-        <div class="logo">BluNova Properties</div>
+        <div class="logo">Blunova Properties</div>
         <ul class="nav-links">
           <li><a href="/portfolio/blunova1/index.html">Home</a></li>
           <li>
@@ -292,13 +308,13 @@
 
     <main>
       <section class="about-hero">
-        <h1>About BluNova Properties</h1>
+        <h1>About Blunova Properties</h1>
       </section>
 
       <section class="about-content">
         <h2>Our Story</h2>
         <p>
-          BluNova Properties was founded in 2010 with a vision to revolutionize
+          Blunova Properties was founded in 2010 with a vision to revolutionize
           the luxury rental market in Tennessee. Our founders, Sarah Thompson
           and Michael Chen, saw an opportunity to blend modern design with
           Southern charm, creating unique living spaces that cater to the
@@ -314,7 +330,7 @@
 
         <h2>Our Mission</h2>
         <p>
-          At BluNova Properties, our mission is to redefine luxury living in
+          At Blunova Properties, our mission is to redefine luxury living in
           Tennessee. We strive to create homes that inspire, comfort, and
           delight our residents. By carefully curating our properties and
           providing exceptional service, we aim to exceed expectations and set
@@ -351,7 +367,7 @@
         <div class="timeline-item left">
           <div class="timeline-content">
             <h3>2010</h3>
-            <p>BluNova Properties founded in Nashville, TN</p>
+            <p>Blunova Properties founded in Nashville, TN</p>
           </div>
         </div>
         <div class="timeline-item right">
@@ -392,31 +408,50 @@
         </h2>
         <div class="team-grid">
           <div class="team-member">
-            <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=687&amp;q=80" alt="Sarah Thompson" width="200" height="200">
+            <img
+              src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=687&amp;q=80"
+              alt="Sarah Thompson"
+              width="200"
+              height="200"
+            />
             <h3>Sarah Thompson</h3>
             <p>Co-founder &amp; CEO</p>
           </div>
           <div class="team-member">
-            <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1171&amp;q=80" alt="Michael Chen" width="200" height="200">
+            <img
+              src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1171&amp;q=80"
+              alt="Michael Chen"
+              width="200"
+              height="200"
+            />
             <h3>Michael Chen</h3>
             <p>Co-founder &amp; COO</p>
           </div>
           <div class="team-member">
-            <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=687&amp;q=80" alt="David Martinez" width="200" height="200">
+            <img
+              src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=687&amp;q=80"
+              alt="David Martinez"
+              width="200"
+              height="200"
+            />
             <h3>David Martinez</h3>
             <p>Head of Property Management</p>
           </div>
-      </div></section>
+        </div>
+      </section>
     </main>
 
     <footer>
-      <p>© 2023 BluNova Properties. All rights reserved.</p>
+      <p>© 2023 Blunova Properties. All rights reserved.</p>
       <p>
-        <a href="/portfolio/blunova1/privacy-policy.html" style="color: white">Privacy Policy</a>
+        <a href="/portfolio/blunova1/privacy-policy.html" style="color: white"
+          >Privacy Policy</a
+        >
         |
-        <a href="/portfolio/blunova1/terms-of-service.html" style="color: white">Terms of Service</a>
+        <a href="/portfolio/blunova1/terms-of-service.html" style="color: white"
+          >Terms of Service</a
+        >
       </p>
     </footer>
-  
-
-</body></html>
+  </body>
+</html>
