--- a/properties.html
+++ b/properties.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-    <base href="/portfolio/blunova1/properties.html">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="track" content="4qgy2iq021tFGUiPN">
-    <title>BluNova Properties - Our Properties</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="track" content="4qgy2iq021tFGUiPN" />
+    <title>Blunova Properties - Our Properties</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap"
+      rel="stylesheet"
+    />
     <style>
       :root {
         --primary-color: #0066cc;
@@ -170,12 +173,25 @@
         }
       }
     </style>
-  
-<!-- Google tag (gtag.js) --> <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-V0GW25P48Z'); </script></head>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async=""
+      src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-V0GW25P48Z");
+    </script>
+  </head>
   <body>
     <header>
       <nav>
-        <div class="logo">BluNova Properties</div>
+        <div class="logo">Blunova Properties</div>
         <ul class="nav-links">
           <li><a href="/portfolio/blunova1/index.html">Home</a></li>
           <li><a href="/portfolio/blunova1/properties.html">Properties</a></li>
@@ -198,76 +214,118 @@
 
       <div class="property-list">
         <div class="property-card">
-          <div class="property-image" style="
+          <div
+            class="property-image"
+            style="
               background-image: url('https://images.unsplash.com/photo-1605276374104-dee2a0ed3cd6?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80');
-            "></div>
+            "
+          ></div>
           <div class="property-details">
             <h3 class="property-title">Luxurious Downtown Loft</h3>
             <p>Nashville, TN</p>
             <p class="property-price">$2,500/month</p>
-            <a href="/portfolio/blunova1/properties/downtown-loft.html" class="cta-button">View Details</a>
+            <a
+              href="/portfolio/blunova1/properties/downtown-loft.html"
+              class="cta-button"
+              >View Details</a
+            >
           </div>
         </div>
         <div class="property-card">
-          <div class="property-image" style="
+          <div
+            class="property-image"
+            style="
               background-image: url('https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1175&amp;q=80');
-            "></div>
+            "
+          ></div>
           <div class="property-details">
             <h3 class="property-title">Charming Suburban Home</h3>
             <p>Franklin, TN</p>
             <p class="property-price">$3,200/month</p>
-            <a href="/portfolio/blunova1/properties/suburban-home.html" class="cta-button">View Details</a>
+            <a
+              href="/portfolio/blunova1/properties/suburban-home.html"
+              class="cta-button"
+              >View Details</a
+            >
           </div>
         </div>
         <div class="property-card">
-          <div class="property-image" style="
+          <div
+            class="property-image"
+            style="
               background-image: url('https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80');
-            "></div>
+            "
+          ></div>
           <div class="property-details">
             <h3 class="property-title">Modern Riverfront Condo</h3>
             <p>Chattanooga, TN</p>
             <p class="property-price">$1,800/month</p>
-            <a href="/portfolio/blunova1/properties/riverfront-condo.html" class="cta-button">View Details</a>
+            <a
+              href="/portfolio/blunova1/properties/riverfront-condo.html"
+              class="cta-button"
+              >View Details</a
+            >
           </div>
         </div>
         <div class="property-card">
-          <div class="property-image" style="
+          <div
+            class="property-image"
+            style="
               background-image: url('https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80');
-            "></div>
+            "
+          ></div>
           <div class="property-details">
             <h3 class="property-title">Cozy Downtown Apartment</h3>
             <p>Memphis, TN</p>
             <p class="property-price">$1,600/month</p>
-            <a href="/portfolio/blunova1/properties/downtown-apartment.html" class="cta-button">View Details</a>
+            <a
+              href="/portfolio/blunova1/properties/downtown-apartment.html"
+              class="cta-button"
+              >View Details</a
+            >
           </div>
         </div>
         <div class="property-card">
-          <div class="property-image" style="
+          <div
+            class="property-image"
+            style="
               background-image: url('https://images.unsplash.com/photo-1600607687939-ce8a6c25118c?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1153&amp;q=80');
-            "></div>
+            "
+          ></div>
           <div class="property-details">
             <h3 class="property-title">Elegant Victorian House</h3>
             <p>Nashville, TN</p>
             <p class="property-price">$4,000/month</p>
-            <a href="/portfolio/blunova1/properties/victorian-house.html" class="cta-button">View Details</a>
+            <a
+              href="/portfolio/blunova1/properties/victorian-house.html"
+              class="cta-button"
+              >View Details</a
+            >
           </div>
         </div>
         <div class="property-card">
-          <div class="property-image" style="
+          <div
+            class="property-image"
+            style="
               background-image: url('https://images.unsplash.com/photo-1600566753086-00f18fb6b3ea?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80');
-            "></div>
+            "
+          ></div>
           <div class="property-details">
             <h3 class="property-title">Spacious Family Home</h3>
             <p>Franklin, TN</p>
             <p class="property-price">$3,500/month</p>
-            <a href="/portfolio/blunova1/properties/family-home.html" class="cta-button">View Details</a>
+            <a
+              href="/portfolio/blunova1/properties/family-home.html"
+              class="cta-button"
+              >View Details</a
+            >
           </div>
         </div>
       </div>
     </main>
 
     <footer>
-      <p>© 2023 BluNova Properties. All rights reserved.</p>
+      <p>© 2023 Blunova Properties. All rights reserved.</p>
     </footer>
 
     <script>
@@ -296,6 +354,5 @@
         });
       });
     </script>
-  
-
-</body></html>
+  </body>
+</html>
