--- a/properties/cherry-grove.html
+++ b/properties/cherry-grove.html
@@ -274,7 +274,7 @@
           <ul class="feature-list">
             <li><strong>Bedrooms:</strong> 4</li>
             <li>
-              <strong>Bathrooms:</strong>1.5 shared bathrooms, with the master
+              <strong>Bathrooms:</strong> 1.5 shared bathrooms, with the master
               bedroom having a private bathroom.
             </li>
             <li><strong>Pet Policy:</strong> Pets not allowed</li>
@@ -282,12 +282,15 @@
         </div>
       </section>
 
-      <section class="property-details">
+      <section style="margin: 40px">
         <h2>Rooms</h2>
         <p>
-          Each room below goes to airbnb which has availability and pricing
-          information
+          <strong>
+            Each room below goes to airbnb which has availability and pricing
+            information
+          </strong>
         </p>
+
         <section class="gallery">
           <a
             href="https://www.airbnb.com/rooms/1030589498253747656"
