--- a/properties/cherry-grove.html
+++ b/properties/cherry-grove.html
@@ -6,7 +6,7 @@
     <meta name="track" content="ilP37bsuJBxCMKqil" />
     <title>Cherry Grove | Blunova Properties</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap"
       rel="stylesheet"
     />
     <style>
@@ -15,20 +15,172 @@
         --secondary-color: #f8f8f8;
         --text-color: #333;
         --accent-color: #ff9900;
-        --font-primary: "Montserrat", sans-serif;
-        --font-secondary: "Playfair Display", serif;
       }
 
-      body {
-        font-family: var(--font-primary);
-        line-height: 1.6;
-        color: var(--text-color);
+      * {
+        box-sizing: border-box;
         margin: 0;
         padding: 0;
       }
 
+      body {
+        font-family: "Montserrat", sans-serif;
+        line-height: 1.6;
+        color: var(--text-color);
+      }
+
+      header {
+        background-color: var(--primary-color);
+        color: white;
+        padding: 1rem;
+        position: fixed;
+        width: 100%;
+        z-index: 1000;
+      }
+
+      nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .logo {
+        font-family: "Playfair Display", serif;
+        font-size: 1.5rem;
+        font-weight: 700;
+      }
+
+      .nav-links {
+        display: flex;
+        list-style: none;
+      }
+
+      .nav-links li {
+        margin-left: 1rem;
+      }
+
+      .nav-links a {
+        color: white;
+        text-decoration: none;
+        transition: color 0.3s ease;
+      }
+
+      .nav-links a:hover {
+        color: var(--accent-color);
+      }
+
       main {
         padding-top: 4rem;
+      }
+
+      .property-hero {
+        height: 60vh;
+        background-image: url("./cherry-grove-images/Front.jpg");
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        color: white;
+        text-align: center;
+        position: relative;
+      }
+
+      .property-hero::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0.2),
+          rgba(0, 0, 0, 0.6)
+        );
+      }
+
+      .property-hero-content {
+        position: relative;
+        padding: 2rem;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+      }
+
+      .property-hero h1 {
+        font-family: "Playfair Display", serif;
+        font-size: 2.5rem;
+        margin-bottom: 0.5rem;
+      }
+
+      .property-details {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 2rem;
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 2rem;
+      }
+
+      .property-description h2 {
+        font-family: "Playfair Display", serif;
+        font-size: 1.8rem;
+        margin-bottom: 1rem;
+      }
+
+      .property-features {
+        background-color: var(--secondary-color);
+        padding: 1.5rem;
+        border-radius: 8px;
+      }
+
+      .property-features h3 {
+        font-family: "Playfair Display", serif;
+        font-size: 1.4rem;
+        margin-bottom: 1rem;
+      }
+
+      .feature-list {
+        list-style-type: none;
+      }
+
+      .feature-list li {
+        margin-bottom: 0.5rem;
+      }
+
+      .cta-button {
+        display: inline-block;
+        background-color: var(--accent-color);
+        color: white;
+        padding: 0.8rem 1.5rem;
+        border-radius: 4px;
+        text-decoration: none;
+        font-weight: bold;
+        margin-top: 1rem;
+        transition: background-color 0.3s ease;
+      }
+
+      .cta-button:hover {
+        background-color: #e68a00;
+      }
+
+      .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 1rem;
+        margin-top: 0rem;
+      }
+
+      .gallery img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 4px;
+        transition: transform 0.3s ease;
+      }
+
+      .gallery img:hover {
+        transform: scale(1.05);
       }
 
       footer {
@@ -38,261 +190,56 @@
         padding: 1rem;
         margin-top: 2rem;
       }
+
+      @media (max-width: 768px) {
+        .property-details {
+          grid-template-columns: 1fr;
+        }
+
+        .property-hero h1 {
+          font-size: 2rem;
+        }
+      }
     </style>
-    <script type="module">
-      class AppHeader extends HTMLElement {
-        constructor() {
-          super();
-          const shadow = this.attachShadow({ mode: "open" });
-          shadow.innerHTML = `
-          <style>
-            :host {
-              display: block;
-              background-color: var(--primary-color);
-              color: white;
-              padding: 1rem;
-              position: fixed;
-              top: 0;
-              left: 0;
-              right: 0;
-              z-index: 1000;
-              font-family: var(--font-primary);
-            }
-            nav {
-              display: flex;
-              justify-content: space-between;
-              align-items: center;
-            }
-            .logo {
-              font-family: var(--font-secondary);
-              font-size: 1.5rem;
-              font-weight: 700;
-            }
-            .nav-links {
-              display: flex;
-              list-style: none;
-            }
-            .nav-links li {
-              margin-left: 1rem;
-            }
-            .nav-links a {
-              color: white;
-              text-decoration: none;
-              transition: color 0.3s ease;
-            }
-            .nav-links a:hover {
-              color: var(--accent-color);
-            }
-          </style>
-          <nav>
-            <div class="logo">Blunova Properties</div>
-            <ul class="nav-links">
-              <li><a href="/index.html">Properties</a></li>
-              <li><a href="/index.html">About</a></li>
-              <li><a href="/index.html">Contact</a></li>
-            </ul>
-          </nav>
-        `;
-        }
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async=""
+      src="https://www.googletagmanager.com/gtag/js?id=G-V0GW25P48Z"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
       }
-
-      class PropertyHero extends HTMLElement {
-        constructor() {
-          super();
-          const shadow = this.attachShadow({ mode: "open" });
-          const title = this.getAttribute("title");
-          const location = this.getAttribute("location");
-          const backgroundImage = this.getAttribute("background-image");
-
-          shadow.innerHTML = `
-          <style>
-            :host {
-              display: block;
-              height: 60vh;
-              background-image: url(${backgroundImage});
-              background-size: cover;
-              background-position: center;
-              display: flex;
-              align-items: flex-end;
-              justify-content: center;
-              color: white;
-              text-align: center;
-              position: relative;
-            }
-            :host::before {
-              content: "";
-              position: absolute;
-              top: 0;
-              left: 0;
-              right: 0;
-              bottom: 0;
-              background: linear-gradient(
-                to bottom,
-                rgba(0, 0, 0, 0.2),
-                rgba(0, 0, 0, 0.6)
-              );
-            }
-            .content {
-              position: relative;
-              padding: 2rem;
-              width: 100%;
-              background-color: rgba(0, 0, 0, 0.5);
-            }
-            h1 {
-              font-family: var(--font-secondary);
-              font-size: 2.5rem;
-              margin-bottom: 0.5rem;
-            }
-            p {
-              font-family: var(--font-primary);
-            }
-          </style>
-          <div class="content">
-            <h1>${title}</h1>
-            <p>${location}</p>
-          </div>
-        `;
-        }
-      }
-
-      class PropertyDetails extends HTMLElement {
-        constructor() {
-          super();
-          const shadow = this.attachShadow({ mode: "open" });
-          shadow.innerHTML = `
-          <style>
-            :host {
-              display: block;
-              max-width: 1200px;
-              margin: 0 auto;
-              padding: 2rem;
-              display: grid;
-              grid-template-columns: 2fr 1fr;
-              gap: 2rem;
-            }
-            h2, h3 {
-              font-family: var(--font-secondary);
-            }
-            .property-description ul, .property-features ul {
-              list-style-type: none;
-              padding-left: 0;
-            }
-            .cta-button {
-              display: inline-block;
-              background-color: var(--accent-color);
-              color: white;
-              padding: 0.8rem 1.5rem;
-              border-radius: 4px;
-              text-decoration: none;
-              font-weight: bold;
-              margin-top: 1rem;
-              transition: background-color 0.3s ease;
-            }
-            .cta-button:hover {
-              background-color: #e68a00;
-            }
-            @media (max-width: 768px) {
-              :host {
-                grid-template-columns: 1fr;
-              }
-            }
-          </style>
-          <div class="property-description">
-            <slot name="description"></slot>
-          </div>
-          <div class="property-features">
-            <slot name="features"></slot>
-          </div>
-        `;
-        }
-      }
-
-      class ImageGallery extends HTMLElement {
-        constructor() {
-          super();
-          const shadow = this.attachShadow({ mode: "open" });
-          shadow.innerHTML = `
-          <style>
-            :host {
-              display: block;
-              margin-top: 2rem;
-            }
-            .gallery {
-              display: grid;
-              grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-              gap: 1rem;
-            }
-            .gallery img {
-              width: 100%;
-              height: 200px;
-              object-fit: cover;
-              border-radius: 4px;
-              transition: transform 0.3s ease;
-            }
-            .gallery img:hover {
-              transform: scale(1.05);
-            }
-          </style>
-          <div class="gallery">
-            <slot></slot>
-          </div>
-        `;
-        }
-
-        connectedCallback() {
-          this.shadowRoot.querySelectorAll("img").forEach((img) => {
-            img.addEventListener("click", () =>
-              this.showFullscreenImage(img.src)
-            );
-          });
-        }
-
-        showFullscreenImage(src) {
-          const fullscreenImg = document.createElement("div");
-          fullscreenImg.style.position = "fixed";
-          fullscreenImg.style.top = "0";
-          fullscreenImg.style.left = "0";
-          fullscreenImg.style.width = "100%";
-          fullscreenImg.style.height = "100%";
-          fullscreenImg.style.backgroundColor = "rgba(0,0,0,0.9)";
-          fullscreenImg.style.display = "flex";
-          fullscreenImg.style.alignItems = "center";
-          fullscreenImg.style.justifyContent = "center";
-          fullscreenImg.style.zIndex = "9999";
-
-          const imgElement = document.createElement("img");
-          imgElement.src = src;
-          imgElement.style.maxWidth = "90%";
-          imgElement.style.maxHeight = "90%";
-          imgElement.style.objectFit = "contain";
-
-          fullscreenImg.appendChild(imgElement);
-          document.body.appendChild(fullscreenImg);
-
-          fullscreenImg.addEventListener("click", () => {
-            document.body.removeChild(fullscreenImg);
-          });
-        }
-      }
-
-      customElements.define("app-header", AppHeader);
-      customElements.define("property-hero", PropertyHero);
-      customElements.define("property-details", PropertyDetails);
-      customElements.define("image-gallery", ImageGallery);
+      gtag("js", new Date());
+      gtag("config", "G-V0GW25P48Z");
     </script>
   </head>
   <body>
-    <app-header></app-header>
+    <header>
+      <nav>
+        <div class="logo">Blunova Properties</div>
+        <ul class="nav-links">
+          <li>
+            <a href="/index.html">Properties</a>
+          </li>
+          <li><a href="/index.html">About</a></li>
+          <li><a href="/index.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
     <main>
-      <property-hero
-        title="Cherry Grove"
-        location="Knoxville, TN"
-        background-image="./cherry-grove-images/Front.jpg"
-      ></property-hero>
+      <section class="property-hero">
+        <div class="property-hero-content">
+          <h1>Cherry Grove</h1>
+          <p>Knoxville, TN</p>
+        </div>
+      </section>
 
-      <property-details>
-        <div slot="description">
+      <section class="property-details">
+        <div class="property-description">
           <h2>Property Overview</h2>
           <p>
             This charming retreat in Knoxville offers a cozy and comfortable
@@ -322,7 +269,7 @@
           </p>
           <a href="" class="cta-button">Apply Now</a>
         </div>
-        <div slot="features">
+        <div class="property-features">
           <h3>Quick Facts</h3>
           <ul class="feature-list">
             <li><strong>Bedrooms:</strong> 4</li>
@@ -333,17 +280,18 @@
             <li><strong>Pet Policy:</strong> Pets not allowed</li>
           </ul>
         </div>
-      </property-details>
+      </section>
 
       <section style="margin: 40px">
         <h2>Rooms</h2>
         <p>
-          <strong
-            >Each room below goes to Airbnb which has availability and pricing
-            information</strong
-          >
+          <strong>
+            Each room below goes to airbnb which has availability and pricing
+            information
+          </strong>
         </p>
-        <image-gallery>
+
+        <section class="gallery">
           <a
             href="https://www.airbnb.com/rooms/1030589498253747656"
             target="_blank"
@@ -362,16 +310,16 @@
             rel="noopener noreferrer"
             ><img src="./rooms/2.webp" width="200" height="200"
           /></a>
+
           <a
             href="https://www.airbnb.com/rooms/1010131515172519042"
             target="_blank"
             rel="noopener noreferrer"
             ><img src="./rooms/4.jpeg" width="200" height="200"
           /></a>
-        </image-gallery>
-
+        </section>
         <h2>House</h2>
-        <image-gallery>
+        <section class="gallery">
           <img
             src="./cherry-grove-images/Front_2.jpg"
             width="200"
@@ -379,6 +327,7 @@
           />
           <img src="./cherry-grove-images/Front.jpg" width="200" height="200" />
           <img src="./cherry-grove-images/Foyer.jpg" width="200" height="200" />
+
           <img
             src="./cherry-grove-images/Kitchen.jpg"
             width="200"
@@ -454,12 +403,47 @@
             width="200"
             height="200"
           />
-        </image-gallery>
+        </section>
       </section>
     </main>
 
     <footer>
       <p>© 2023 Blunova Properties. All rights reserved.</p>
     </footer>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const galleryImages = document.querySelectorAll(".gallery>img");
+
+        galleryImages.forEach((img) => {
+          img.addEventListener("click", () => {
+            const fullscreenImg = document.createElement("div");
+            fullscreenImg.style.position = "fixed";
+            fullscreenImg.style.top = "0";
+            fullscreenImg.style.left = "0";
+            fullscreenImg.style.width = "100%";
+            fullscreenImg.style.height = "100%";
+            fullscreenImg.style.backgroundColor = "rgba(0,0,0,0.9)";
+            fullscreenImg.style.display = "flex";
+            fullscreenImg.style.alignItems = "center";
+            fullscreenImg.style.justifyContent = "center";
+            fullscreenImg.style.zIndex = "9999";
+
+            const imgElement = document.createElement("img");
+            imgElement.src = img.src;
+            imgElement.style.maxWidth = "90%";
+            imgElement.style.maxHeight = "90%";
+            imgElement.style.objectFit = "contain";
+
+            fullscreenImg.appendChild(imgElement);
+            document.body.appendChild(fullscreenImg);
+
+            fullscreenImg.addEventListener("click", () => {
+              document.body.removeChild(fullscreenImg);
+            });
+          });
+        });
+      });
+    </script>
   </body>
 </html>
